quick change to expose /products